# Final-Year-Assignment

./: README.md
Listener app/: CMakeLists.txt  Resources.qrc  listener.cpp  listener.h  main.cpp
Main app/: AbstractItemFactory.h  CMakeLists.txt  Resources.qrc  addcustomerwidget.cpp  addcustomerwidget.h  additemswidget.cpp  additemswidget.h  backupitemlist.cpp  backupitemlist.h  bookitem.cpp  bookitem.h  customer.cpp  customer.h  customerlist.cpp  customerlist.h  item.cpp  item.h  itemfactory.cpp  itemfactory.h  itemlist.cpp  itemlist.h  magazineitem.cpp  magazineitem.h  mainwindow.cpp  mainwindow.h  modelclass.cpp  modelclass.h  purchaseditem.cpp  purchaseditem.h  transaction.cpp  transaction.h  transactionlist.cpp  transactionlist.h  transactionwidget.cpp  transactionwidget.h
