cmake_minimum_required(VERSION 3.14)

project(COS3711_A03_2023_LISTENER LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Network)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Network)

add_executable(COS3711_A03_2023_LISTENER
  main.cpp
  listener.h listener.cpp
  Resources.qrc
)
target_link_libraries(COS3711_A03_2023_LISTENER Qt${QT_VERSION_MAJOR}::Widgets Qt6::Network)

install(TARGETS COS3711_A03_2023_LISTENER
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
